Add ipython notebook instruction in 20150203; ignoring ipynb checkpoints folder.

--- a/20150203.ipynb
+++ b/20150203.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bea9424a748a9e7c1ba3da2f01c841c8bd679a3d3a91f9bb268329ca84f1fc5f"
+  "signature": "sha256:6b962f5594369707050ef7f086d3eb59ec06a2bd1be25cfa21518b45cda6a317"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,6 +75,17 @@
       "    \n",
       "    \n",
       "P.S. For editing ipython notebook with Markdown, here's a [Markdown cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Running iPython Notebook\n",
+      "\n",
+      "To bring up ipython notebook, go to your desired working directory in shell, and type `ipython notebook &`, and it will open up in your default browser. The notebook will be saved in this working directory. \n",
+      "\n",
+      "To open a existing notebook, `ipython notebook <your notebook>.ipynb`."
      ]
     },
     {
