edits from presentation

--- a/20150209.ipynb
+++ b/20150209.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ab6b522160a8b563aebdcf5a7e90f6a443ec85091a9a8aa0eff65515527868e4"
+  "signature": "sha256:fb12034dff317ce0f7ade268056cbdd2d7d5bd8798c144055a22c021940e9005"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -66,36 +66,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The Zen of Python, by Tim Peters\n",
-        "\n",
-        "Beautiful is better than ugly.\n",
-        "Explicit is better than implicit.\n",
-        "Simple is better than complex.\n",
-        "Complex is better than complicated.\n",
-        "Flat is better than nested.\n",
-        "Sparse is better than dense.\n",
-        "Readability counts.\n",
-        "Special cases aren't special enough to break the rules.\n",
-        "Although practicality beats purity.\n",
-        "Errors should never pass silently.\n",
-        "Unless explicitly silenced.\n",
-        "In the face of ambiguity, refuse the temptation to guess.\n",
-        "There should be one-- and preferably only one --obvious way to do it.\n",
-        "Although that way may not be obvious at first unless you're Dutch.\n",
-        "Now is better than never.\n",
-        "Although never is often better than *right* now.\n",
-        "If the implementation is hard to explain, it's a bad idea.\n",
-        "If the implementation is easy to explain, it may be a good idea.\n",
-        "Namespaces are one honking great idea -- let's do more of those!\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 48
     },
     {
      "cell_type": "markdown",
@@ -125,8 +97,10 @@
      "collapsed": false,
      "input": [
       "import math\n",
-      "#everything inside the math module is accessible via math.function_name. These functions are in a separate namespace\n",
-      "#functions and variables accessible without any package or module name in front are in the local namespace\n",
+      "#everything inside the math module is accessible via math.function_name. \n",
+      "#These functions are in a separate namespace\n",
+      "#functions and variables accessible without any package or module \n",
+      "#name in front are in the local namespace\n",
       "a = 2.0\n",
       "print(math.cos(a))"
      ],
@@ -141,7 +115,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
@@ -157,7 +131,9 @@
       "from math import cos, sin\n",
       "#cos and sin are now locally available\n",
       "print(cos(a))\n",
-      "print(sin(a))"
+      "print(sin(a))\n",
+      "#cos = 5\n",
+      "#cos(a)"
      ],
      "language": "python",
      "metadata": {},
@@ -171,7 +147,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 50
     },
     {
      "cell_type": "markdown",
@@ -191,7 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 51
     },
     {
      "cell_type": "markdown",
@@ -212,7 +188,9 @@
      "input": [
       "import potato\n",
       "a = 2.0\n",
-      "print(potato.tomato(a))"
+      "print(potato.tomato(a))\n",
+      "import os\n",
+      "os.getcwd()"
      ],
      "language": "python",
      "metadata": {},
@@ -223,9 +201,17 @@
        "text": [
         "4.0\n"
        ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 52,
+       "text": [
+        "'/Users/alex/code/pythonhour'"
+       ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 52
     },
     {
      "cell_type": "markdown",
@@ -239,21 +225,24 @@
      "collapsed": false,
      "input": [
       "import imp #import helper module\n",
-      "imp.reload(potato) #note that in python2, reload is in the standard library, so reload(potato) works"
+      "imp.reload(potato) #note that in python2, \n",
+      "#reload is in the standard library, so reload(potato) works\n",
+      "import glob\n",
+      "l = glob.glob(\"*.py\")\n",
+      "print(l)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 11,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "<module 'potato' from './potato.py'>"
+        "['potato.py']\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
@@ -268,8 +257,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for i in range(0,5):\n",
-      "    print(i)"
+      "for i in range(0,5,2):\n",
+      "    print(i)\n",
+      "print(i)"
      ],
      "language": "python",
      "metadata": {},
@@ -279,14 +269,13 @@
        "stream": "stdout",
        "text": [
         "0\n",
-        "1\n",
         "2\n",
-        "3\n",
+        "4\n",
         "4\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 54
     },
     {
      "cell_type": "markdown",
@@ -327,7 +316,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 55
     },
     {
      "cell_type": "markdown",
@@ -356,7 +345,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 56
     },
     {
      "cell_type": "markdown",
@@ -369,7 +358,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "c = [1,2,3]\n",
+      "c = ['galaxy',2,3]\n",
       "for i,j in zip(b,c):\n",
       "    print(i, j)"
      ],
@@ -380,13 +369,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "a 1\n",
+        "a galaxy\n",
         "b 2\n",
         "c 3\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 57
     },
     {
      "cell_type": "markdown",
@@ -418,7 +407,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
@@ -436,7 +425,8 @@
       "    b = b - 1\n",
       "    print(b)\n",
       "    if b <= 1:\n",
-      "        break"
+      "        break\n",
+      "print(\"galaxies are great!\")"
      ],
      "language": "python",
      "metadata": {},
@@ -448,11 +438,12 @@
         "4\n",
         "3\n",
         "2\n",
-        "1\n"
+        "1\n",
+        "galaxies are great!\n"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 59
     },
     {
      "cell_type": "markdown",
@@ -468,7 +459,13 @@
      "input": [
       "a = ['a','b','c']\n",
       "b = [i.upper() for i in a]\n",
-      "print(b)"
+      "print(b)\n",
+      "test = []\n",
+      "for i in a:\n",
+      "    test.append(i.upper())\n",
+      "test = test + ['bob']\n",
+      "print(test)\n",
+      "print(2*test)"
      ],
      "language": "python",
      "metadata": {},
@@ -477,11 +474,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['A', 'B', 'C']\n"
+        "['A', 'B', 'C']\n",
+        "['A', 'B', 'C', 'bob']\n",
+        "['A', 'B', 'C', 'bob', 'A', 'B', 'C', 'bob']\n"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 60
     },
     {
      "cell_type": "markdown",
@@ -546,18 +545,18 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-32-a3bbba8daa27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-61-a3bbba8daa27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mTypeError\u001b[0m: a float is required"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 61
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = [1.0,2.0,'c',3.0]\n",
+      "a = ['a',2.0,'c',3.0]\n",
       "for i in a:\n",
       "    try:\n",
       "        print(math.cos(i))\n",
@@ -566,19 +565,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.5403023058681398\n",
-        "-0.4161468365471424\n",
-        "c isn't a float!\n",
-        "-0.9899924966004454\n"
-       ]
-      }
-     ],
-     "prompt_number": 33
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -586,6 +573,61 @@
      "source": [
       "##Questions?"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "d = {}\n",
+      "d['a'] = [1,2,3]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "d['a']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = ['foo']\n",
+      "y = x #apparently a deep copy since strings are immutable\n",
+      "y += 'bar'\n",
+      "print(y)\n",
+      "i = [1,2,3]\n",
+      "j = i #i and j point to the same thing\n",
+      "j.append(5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(i)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
