Edit during meeting by Sharon

--- a/20150209.ipynb
+++ b/20150209.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ab6b522160a8b563aebdcf5a7e90f6a443ec85091a9a8aa0eff65515527868e4"
+  "signature": "sha256:8c67521d5317a4bf3874176fdb66a04e4cbffe4fef5d27dd5ec3fec8c5c12230"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -141,7 +141,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -157,7 +157,9 @@
       "from math import cos, sin\n",
       "#cos and sin are now locally available\n",
       "print(cos(a))\n",
-      "print(sin(a))"
+      "print(sin(a))\n",
+      "cos = 1 # will re define cos as an int, no longer a function - bad idea!\n",
+      "# cos(a) # will give error!"
      ],
      "language": "python",
      "metadata": {},
@@ -184,7 +186,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import scipy.stats\n",
+      "import scipy.stats # this will also do, equivalently, \"import scipy\"\n",
       "import numpy as np #IMPORTANT CONVENTION\n",
       "from astropy.io import fits"
      ],
@@ -202,8 +204,9 @@
       "this is unsafe as it can overwrite functions already in locals, such as open\n",
       "\n",
       "####How do I import things from a module I wrote?\n",
-      "* First, put it in the directory where you're running python, or in a place where python knows to look. It may be helpful to define a PYTHONPATH shell variable\n",
-      "* import the module as you would any other. I have a very simple example with potato.py in this directory."
+      "* First, put it in the directory where you're running python, or in a place where python knows to look. It may be helpful to **define a PYTHONPATH shell variable**.\n",
+      "* import the module as you would any other. I have a very simple example with potato.py in this directory.\n",
+      "* use pip to manage (install, update, delete) python packages (pip comes with anaconda)."
      ]
     },
     {
@@ -226,6 +229,37 @@
       }
      ],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Where am I now?\n",
+      "import os\n",
+      "os.getcwd() # os also has function to change directory"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "'/Users/xuesongwang/pythonhour'"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Using python interactive mode:\n",
+      "In terminal/shell, it's probably a better idea to work in ipython instead of python. \n",
+      "For example, you can directly use shell commands within ipython."
+     ]
     },
     {
      "cell_type": "markdown",
@@ -256,6 +290,27 @@
      "prompt_number": 11
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import glob\n",
+      "print(glob.glob(\"*py\")) # works like 'ls' in current directory\n",
+      "# hey look, it's ok to have the same function and module names"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['potato.py']\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -268,8 +323,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for i in range(0,5):\n",
-      "    print(i)"
+      "for i in range(1,5,2): # stop before 5, start from 1, increment by 2\n",
+      "    print(i)\n",
+      "print(i)"
      ],
      "language": "python",
      "metadata": {},
@@ -278,15 +334,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0\n",
         "1\n",
-        "2\n",
         "3\n",
-        "4\n"
+        "3\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -586,6 +640,54 @@
      "source": [
       "##Questions?"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# String is one of the immutable data types!\n",
+      "x = 'foo'\n",
+      "y = x # this is a deep copy since strings are immutable!\n",
+      "y += 'bar'\n",
+      "print(x) # not foobar!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "foo\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Be careful with strings and lists!\n",
+      "x = ['a','b','c']\n",
+      "x = ['foo']\n",
+      "y = x\n",
+      "#y = y + 'bar' # this will break!\n",
+      "y += 'bar' # this is appending, but converting 'bar' into a list\n",
+      "print(x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['foo', 'b', 'a', 'r']\n"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
